Fix bootstrap overflow on mobile

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 .profile-image {
